TEXT data source updated.

--- a/Experiment TEXT.ipynb
+++ b/Experiment TEXT.ipynb
@@ -12,7 +12,7 @@
     "from numpy.linalg import norm\n",
     "from scipy.spatial import distance\n",
     "d=10000\n",
-    "## please download the data file from the following link: https://drive.google.com/file/d/1x1g4rA5dOoZ0NIaANwHlWseVIAM8ztHr/view?usp=sharing\n",
+    "## please download the data file from the following link: https://drive.google.com/file/d/1x1g4rA5dOoZ0NIaANwHlWseVIAM8ztHr/\n",
     "mat = scipy.io.loadmat('Data/Text/DATA_EXAMPLE_PIPELINE_HD_10000_3.mat')\n",
     "TR_D,TR_L,TS_D,TS_L=mat[\"TR_D\"],mat[\"TR_L\"],mat[\"TS_D\"],mat[\"TS_L\"]\n"
    ]
