--- a/Experiment IRIS.ipynb
+++ b/Experiment IRIS.ipynb
@@ -50,9 +50,8 @@
     "    print(a.shape)\n",
     "    \n",
     "def plot(mapp,numOfClasses,it,updatedOrder):\n",
-    "#     print(\"sda\")\n",
+    "\n",
     "    global nodes\n",
-    "#     print(mapp.shape,mapp)\n",
     "    # Supports upto 15 classes\n",
     "    markers = [x[0] for x in list(Line2D.filled_markers)]\n",
     "    fig = plt.figure()\n",
@@ -226,22 +225,7 @@
     "length = 150;\n",
     "\n",
     "D_tmp = np.concatenate((class_1_hd, class_2_hd, class_3_hd), axis = 0)\n",
-    "TR_L_tmp = np.concatenate((TR_L[TR_L == 0], TR_L[TR_L == 1], TR_L[TR_L == 2]), axis = 0)\n",
-    "\n",
-    "# # shuffle dataset\n",
-    "# inds = np.random.permutation(length)\n",
-    "# D_HD_PERM = D_tmp[inds, :]\n",
-    "\n",
-    "# ###### rounding up the input vectors\n",
-    "# # D_HD_PERM = roundComplexVector(D_HD_PERM,decimals)\n",
-    "\n",
-    "# L_perm = TR_L_tmp[inds].reshape(TR_L.shape[0], 1) # ?\n",
-    "\n",
-    "# TR_perm = D_HD_PERM[: size_train, :]\n",
-    "# TR_L_perm = L_perm[: size_train]\n",
-    "\n",
-    "# TS_D_perm = D_HD_PERM[size_train: , :]\n",
-    "# TS_L_perm = L_perm[size_train: , :]"
+    "TR_L_tmp = np.concatenate((TR_L[TR_L == 0], TR_L[TR_L == 1], TR_L[TR_L == 2]), axis = 0)\n"
    ]
   },
   {
@@ -545,8 +529,7 @@
     "            labelMap[inds].append(TR_L_perm[k])\n",
     "        else:\n",
     "            labelMap[inds]=[TR_L_perm[k]]\n",
-    "#     print(labelMap)\n",
-    "#     labelMap={}\n",
+    "\n",
     "    for i in labelMap:\n",
     "        a = np.array(labelMap[i])\n",
     "        counts = np.bincount(a)\n",
