--- a/Experiment TEXT.ipynb
+++ b/Experiment TEXT.ipynb
@@ -23,27 +23,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Language mapping\n",
     "DICTIONARY={\n",
-    "0:\"Bulgarian\",\n",
-    "1: \"Czech\",\n",
-    "2: \"Danish\",\n",
-    "3: \"Dutch\",\n",
-    "4: \"German\",\n",
-    "5: \"English\",\n",
-    "6: \"Estonian\",\n",
-    "7: \"Finnish\",\n",
-    "8: \"French\",\n",
-    "9: \"Greec\",\n",
-    "10: \"Hungarian\",\n",
-    "11: \"Italian\",\n",
-    "12: \"Latvian\",\n",
-    "13: \"Lithuanian\",\n",
-    "14: \"Polish\",\n",
-    "15: \"Portuguese\",\n",
-    "16: \"Romanian\",\n",
-    "17: \"Slovak\",\n",
-    "19: \"Spanish\",\n",
-    "20: \"Swedish\"\n",
+    "    0:\"Bulgarian\",\n",
+    "    1: \"Czech\",\n",
+    "    2: \"Danish\",\n",
+    "    3: \"Dutch\",\n",
+    "    4: \"German\",\n",
+    "    5: \"English\",\n",
+    "    6: \"Estonian\",\n",
+    "    7: \"Finnish\",\n",
+    "    8: \"French\",\n",
+    "    9: \"Greec\",\n",
+    "    10: \"Hungarian\",\n",
+    "    11: \"Italian\",\n",
+    "    12: \"Latvian\",\n",
+    "    13: \"Lithuanian\",\n",
+    "    14: \"Polish\",\n",
+    "    15: \"Portuguese\",\n",
+    "    16: \"Romanian\",\n",
+    "    17: \"Slovak\",\n",
+    "    19: \"Spanish\",\n",
+    "    20: \"Swedish\"\n",
     "}"
    ]
   },
@@ -86,8 +87,7 @@
     "    print(a.shape)\n",
     "    \n",
     "def plot(mapp,numOfClasses,it,selectedClasses,updatedOrder):\n",
-    "    # print(mapp)\n",
-    "#     print(\"sda\")\n",
+    "\n",
     "    global nodes\n",
     "    # Supports upto 15 classes\n",
     "    markers = [x[0] for x in list(Line2D.filled_markers)]\n",
@@ -104,7 +104,6 @@
     "        ind = np.argwhere(mapp == (i+1))\n",
     "        x = [t[0] for t in ind]\n",
     "        y = [t[1] for t in ind]\n",
-    "        # ax.scatter(x, y, color = cm(i//3*3.0/21), label = DICTIONARY[i])\n",
     "        ax.scatter(x, y, color = colors[j], label = DICTIONARY[i])\n",
     "        colorToClass[(i+1)]=colors[j]\n",
     "        j+=1\n",
@@ -269,8 +268,7 @@
     "    while(itr*numSOMs<num_of_classes):\n",
     "        itr+=1\n",
     "    itr=4#(itr*numSOMs)\n",
-    "#     itr=(itr*numSOMs)*2\n",
-    "    # itr=int(itr*1.5)\n",
+    "\n",
     "    print(\"Iterations: \",itr)\n",
     "    updatedOrder=[]\n",
     "    beta=1\n",
@@ -314,9 +312,7 @@
     "        itrUpdate['class']=TR_L_perm[ID]\n",
     "        jj+=1\n",
     "        updatedOrder.append(itrUpdate)\n",
-    "#         print(TR_L_perm[ID])\n",
-    "#         ssss.add(TR_L_perm[ID])\n",
-    "#         print()\n",
+    "\n",
     "    return [SOM,updatedOrder]\n",
     "def label(SOM,TR_perm,TR_L_perm,nodes,HDind_coord,numOfClasses,it,numSOMs,selectedClasses,updatedOrder):\n",
     "    labelMap={}\n",
@@ -383,7 +379,6 @@
     "        \n",
     "        inds= (HDind_coord[bmu_ind][0],HDind_coord[bmu_ind][1])\n",
     "        if(inds in labelMap):\n",
-    "#             print(labelMap[inds],TS_L_perm[k])\n",
     "            ITER[TS_L_perm[k]][labelMap[inds]]+=1\n",
     "        else:\n",
     "            assert(1==0)\n",
